--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <h3>Movie Comparision</h3>
                         </div>
                         <div class="project-text">
-                            <p>Movie comparision uses omdbapi movie api. Search for movie on both side. We will tell you which movie is the best.</p>
+                            <p>Movie comparision uses omdbapi movie api. Search for movie on both sides. We will tell you which movie is the best.</p>
                         </div>
                         <div class="project-elaments">
                             <a href="#project">html</a>
@@ -147,7 +147,7 @@
                             <a href="#project">css</a>
                         </div>
                         <div class="project-sources">
-                            <a href="http://mysmallapps.de/">github<span><i class="fab fa-github "></i></span></a>
+                            <a href="https://github.com/Hossain79/Portfolio-v1">github<span><i class="fab fa-github "></i></span></a>
                             <a href="https://hossain79.github.io/Portfolio-v1/">visit<span><i class="fas fa-external-link-square-alt "></i></span></a>
                         </div>
                     </div>
@@ -167,7 +167,7 @@
                             <h3>Breaking Bad</h3>
                         </div>
                         <div class="project-text">
-                            <p>Breaking Bad is a react.js app. This website uses beaking bad api. Type any character name from the Breaking Bad TV siries for more information</p>
+                            <p>Breaking Bad is a react.js app. This website uses beaking bad api. Type any character name from the Breaking Bad TV show to get more info.</p>
                         </div>
                         <div class="project-elaments">
                             <a href="#project">React.js</a>
@@ -189,7 +189,7 @@
                             <h3>Hdreams</h3>
                         </div>
                         <div class="project-text">
-                            <p> Hdreams is a real state website with Responsive design and nice looking</p>
+                            <p> Hdreams is a real state website with Responsive design and nice looking UI.</p>
                         </div>
                         <div class="project-elaments">
                             <a href="#project">html</a>
@@ -228,7 +228,7 @@
                             <h3>PhotoWed</h3>
                         </div>
                         <div class="card-body">
-                            <p>PhotoWed is a site for photo studio. This is a templated.co templete and I got inspired by this their ideas.</p>
+                            <p>PhotoWed is a site for photo studio. This is a templated.co templete and I got inspired by their ideas.</p>
                         </div>
                         <div class="card-footer">
                             <ul>
@@ -294,7 +294,7 @@
                             <h3>Expense Tracker</h3>
                         </div>
                         <div class="card-body">
-                            <p>Expense tracker helps to keep track of your incomes and expenses and gives you a history of your expenditure</p>
+                            <p>Expense tracker helps to keep track of your incomes and expenses and gives you a history of your expenditures</p>
                         </div>
                         <div class="card-footer">
                             <ul>
@@ -388,7 +388,7 @@
                             <h3>Relaxation App</h3>
                         </div>
                         <div class="card-body">
-                            <p>This is a simple app to help you with relaxation. Breath in, hold and breath out.</p>
+                            <p>This is a simple app to help you with relaxation. Breath in, hold and breath out to relax.</p>
                         </div>
                         <div class="card-footer">
                             <ul>
@@ -509,7 +509,7 @@
             <p>&copy; Sharif Hossain 2020</p>
         </div>
         <div class="images-credit">
-            <p>*Images: unplash <a href="https://unsplash.com/"><i class="fas fa-external-link-square-alt"></i></a></p>
+            <p>*Images: Unplash <a href="https://unsplash.com/"><i class="fas fa-external-link-square-alt"></i></a></p>
         </div>
     </footer>
     <script src="./assts/script.js"></script>
