--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <h3>Movie Comparision</h3>
                         </div>
                         <div class="project-text">
-                            <p>Movie comparision uses omdbapi movie api. Search for movie on both side. We will tell you which movie is the best.</p>
+                            <p>Movie comparision uses omdbapi movie api. Search for movie on both sides. We will tell you which movie is the best.</p>
                         </div>
                         <div class="project-elaments">
                             <a href="#project">html</a>
@@ -147,7 +147,7 @@
                             <a href="#project">css</a>
                         </div>
                         <div class="project-sources">
-                            <a href="http://mysmallapps.de/">github<span><i class="fab fa-github "></i></span></a>
+                            <a href="https://github.com/Hossain79/Portfolio-v1">github<span><i class="fab fa-github "></i></span></a>
                             <a href="https://hossain79.github.io/Portfolio-v1/">visit<span><i class="fas fa-external-link-square-alt "></i></span></a>
                         </div>
                     </div>
@@ -167,7 +167,7 @@
                             <h3>Breaking Bad</h3>
                         </div>
                         <div class="project-text">
-                            <p>Breaking Bad is a react.js app. This website uses beaking bad api. Type any character name from the Breaking Bad TV siries for more information</p>
+                            <p>Breaking Bad is a react.js app. This website uses beaking bad api. Type any character name from the Breaking Bad TV show to get more info.</p>
                         </div>
                         <div class="project-elaments">
                             <a href="#project">React.js</a>
@@ -186,23 +186,23 @@
                  <div class="project-body project-4 left">
                     <div class="project-info">
                         <div class="project-name">
-                            <h3>Hdreams</h3>
+                            <h3>Kids-Encyclopedia</h3>
                         </div>
                         <div class="project-text">
-                            <p> Hdreams is a real state website with Responsive design and nice looking</p>
+                            <p>Kids-Encyclopedia is a fun weekend project I build to implement my react router dom ideas.</p>
                         </div>
                         <div class="project-elaments">
                             <a href="#project">html</a>
                             <a href="#project">css</a>
-                            <a href="#project">js</a>
+                            <a href="#project">react.js</a>
                         </div>
                         <div class="project-sources">
-                            <a href="https://github.com/Hossain79/Hdreams">github<span><i class="fab fa-github "></i></span></a>
-                            <a href="https://hossain79.github.io/Hdreams/">visit<span><i class="fas fa-external-link-square-alt "></i></span></a>
+                            <a href="https://github.com/Hossain79/kidEncyclopedia.git">github<span><i class="fab fa-github "></i></span></a>
+                            <a href="https://hossain79.github.io/kidEncyclopedia/">visit<span><i class="fas fa-external-link-square-alt "></i></span></a>
                         </div>
                     </div>
                     <div class="project-image">                   
-                        <img src="./assts/imgs/screenShots/Hdreams.png" alt="">
+                        <img src="./assts/imgs/screenShots/kids-encyclopedia.png" alt="">
                     </div>
                 </div> 
             </div>
@@ -228,7 +228,7 @@
                             <h3>PhotoWed</h3>
                         </div>
                         <div class="card-body">
-                            <p>PhotoWed is a site for photo studio. This is a templated.co templete and I got inspired by this their ideas.</p>
+                            <p>PhotoWed is a site for photo studio. This is a templated.co templete and I got inspired by their ideas.</p>
                         </div>
                         <div class="card-footer">
                             <ul>
@@ -242,15 +242,15 @@
                         <div class="card-head">
                             <span><i class="fas fa-globe fa-4x"></i></span>
                             <div class="icons">
-                                <a href="https://github.com/Hossain79/newYearCountdown.git"><span><i class="fab fa-github fa-2x"></i></span></a>
-                                <a href="https://hossain79.github.io/newYearCountdown/"><span><i class="fas fa-external-link-alt fa-2x"></i></span></a>
+                                <a href="https://github.com/Hossain79/Hdreams"><span><i class="fab fa-github fa-2x"></i></span></a>
+                                <a href="https://hossain79.github.io/Hdreams/"><span><i class="fas fa-external-link-alt fa-2x"></i></span></a>
                             </div>
                         </div>
                         <div class="card-title">
-                            <h3>New Year Countdown</h3>
+                            <h3>Hdreams</h3>
                         </div>
                         <div class="card-body">
-                            <p>New year countdown is a simple site. While building this site I had fun with javaScript date functions. </p>
+                            <p> Hdreams is a real state website with Responsive design and nice looking UI.</p>
                         </div>
                         <div class="card-footer">
                             <ul>
@@ -260,6 +260,7 @@
                             </ul>
                         </div>
                     </div>
+                   
                     <div class="card card-3">
                         <div class="card-head">
                             <span><i class="fas fa-globe fa-4x"></i></span>
@@ -294,7 +295,7 @@
                             <h3>Expense Tracker</h3>
                         </div>
                         <div class="card-body">
-                            <p>Expense tracker helps to keep track of your incomes and expenses and gives you a history of your expenditure</p>
+                            <p>Expense tracker helps to keep track of your incomes and expenses and gives you a history of your expenditures</p>
                         </div>
                         <div class="card-footer">
                             <ul>
@@ -388,7 +389,7 @@
                             <h3>Relaxation App</h3>
                         </div>
                         <div class="card-body">
-                            <p>This is a simple app to help you with relaxation. Breath in, hold and breath out.</p>
+                            <p>This is a simple app to help you with relaxation. Breath in, hold and breath out to relax.</p>
                         </div>
                         <div class="card-footer">
                             <ul>
@@ -398,19 +399,19 @@
                             </ul>
                         </div>
                     </div>
-                    <!-- <div class="card card-9">
+                    <div class="card card-2">
                         <div class="card-head">
                             <span><i class="fas fa-globe fa-4x"></i></span>
                             <div class="icons">
-                                <a href=""><span><i class="fab fa-github fa-2x"></i></span></a>
-                                <a href=""><span><i class="fas fa-external-link-alt fa-2x"></i></span></a>
+                                <a href="https://github.com/Hossain79/newYearCountdown.git"><span><i class="fab fa-github fa-2x"></i></span></a>
+                                <a href="https://hossain79.github.io/newYearCountdown/"><span><i class="fas fa-external-link-alt fa-2x"></i></span></a>
                             </div>
                         </div>
                         <div class="card-title">
-                            <h3>Card Title 9</h3>
+                            <h3>New Year Countdown</h3>
                         </div>
                         <div class="card-body">
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut obcaecati temporibus harum vel facere fuga esse porro, alias deserunt architecto deleniti aut quos ad totam sunt hic perferendis incidunt provident.</p>
+                            <p>New year countdown is a simple site. While building this site I had fun with javaScript date functions. </p>
                         </div>
                         <div class="card-footer">
                             <ul>
@@ -419,7 +420,8 @@
                                 <li>javaScript</li>
                             </ul>
                         </div>
-                    </div> -->
+                    </div>
+
                     <!-- <div class="card card-10 ">
                         <div class="card-head">
                             <span><i class="fas fa-globe fa-4x"></i></span>
@@ -509,7 +511,7 @@
             <p>&copy; Sharif Hossain 2020</p>
         </div>
         <div class="images-credit">
-            <p>*Images: unplash <a href="https://unsplash.com/"><i class="fas fa-external-link-square-alt"></i></a></p>
+            <p>*Images: Unplash <a href="https://unsplash.com/"><i class="fas fa-external-link-square-alt"></i></a></p>
         </div>
     </footer>
     <script src="./assts/script.js"></script>
